# picassembly

./: .gitignore  README_TENSOR_LOGIC.md  pyproject.toml  setup.py
examples/: basic_reasoning.py  comprehensive_demo.py  knowledge_graph.py  neural_integration.py  rule_learning.py
src/tensor_logic/: __init__.py
src/tensor_logic/core/: knowledge_base.py  predicate.py  rule.py  tensor_logic.py
src/tensor_logic/inference/: __init__.py  engine.py
src/tensor_logic/neural/: __init__.py  modules.py
src/tensor_logic/opencog/: __init__.py
src/tensor_logic/ops/: __init__.py
src/tensor_logic/utils/: helpers.py
tests/: test_knowledge_base.py  test_neural.py  test_ops.py  test_predicate.py  test_rule.py  test_tensor_logic.py
